# qt-odk-slideplayer

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  officeconnection.cpp  officeconnection.h  slideshowcontroller.cpp  slideshowcontroller.h
